<resources>
    <string name="app_name">优菜网</string>
    <string name="title_home">首页</string>
    <string name="title_order">采购单</string>
    <string name="title_me">我的</string>
    <string name="login_title">用户登录</string>
    <string name="login_name_hint">请输入手机号</string>
    <string name="login_pass_hint">请输入密码</string>
    <string name="pass_again_hint">请再次输入密码</string>
    <string name="login_remember">记住密码</string>
    <string name="login_register">注册用户?</string>
    <string name="login_in">登录</string>
    <string name="login_next">下次再说</string>

    <!--register_user-->
    <string name="register">注册用户</string>
    <string name="register_name">请输入单位名称</string>
    <string name="register_addr">请输入单位地址</string>
    <string name="register_not_null">注册信息不能为空</string>
    <string name="register_pwd_error">两次密码不匹配</string>

    <!--me_fragment-->
    <string name="me_login_register">登录/注册</string>
    <string name="me_information">个人信息</string>
    <string name="me_order">采购单</string>
    <string name="me_driver">送货单</string>
    <string name="me_palm_list">掌纹管理</string>
    <string name="me_palm_test">掌纹认证</string>
    <string name="me_setting">设置</string>
    <string name="me_about">关于软件</string>
    <string name="me_btn_exit">注销用户</string>
    <string name="me_fragment_name">单位名称：</string>
    <string name="me_fragment_phone">手机号：</string>
    <string name="app_copyright">Copyright@2019</string>
    <string name="about_upgrade_text">检查更新</string>

    <!--home_fragment-->
    <string name="home_order_btn">下单</string>
    <string name="home_category_vegetable">蔬菜类</string>
    <string name="home_category_meat">肉类</string>
    <string name="home_category_fish">鱼类</string>
    <string name="home_category_oil">干货粮油类</string>
    <string name="home_category_goods">杂货类</string>
    <string name="home_notify_content">无法获取数据，请您先</string>
    <string name="home_notify_login">登录</string>
    <string name="home_no_login_1">无法获取数据，请您先</string>
    <string name="home_no_login_2"> 登录</string>

    <!--palm_list_layout-->
    <string name="palm_list_add_button">＋ 添加掌纹</string>
    <string name="palm_list_no_palm">无录入的掌纹</string>
    <string name="palm_list_failure_msg">获取掌纹失败</string>
    <string name="certify_success_alert_title">认证通过</string>
    <string name="certify_success_alert_content">恭喜您，掌纹认证通过.\n耗时=%d毫秒</string>
    <string name="certify_fail_alert_title">认证失败</string>
    <string name="certify_fail_alert_content">很抱歉，掌纹认证未通过.\n耗时=%d毫秒</string>

    <string name="dialog_title">温馨提示：</string>
</resources>
