<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:background="@drawable/login_back">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/login_title"
        android:gravity="center"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="30dp"
            android:src="@drawable/login_name"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/login_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/login_name_hint"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="#1b1b1b"
            android:maxLength="11"/>

        <ImageView
            android:id="@+id/clear_name"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:src="@drawable/login_clear"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="30dp"
            android:src="@drawable/login_pass"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/login_pass_hint"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="#1b1b1b"/>

        <ImageView
            android:id="@+id/clear_pass"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:src="@drawable/login_clear"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_in"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/login_button_login_in"
        android:text="@string/login_in"
        android:textColor="@color/white_1"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Button
            android:id="@+id/login_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="36dp"
            android:background="@drawable/login_button_register"
            android:text="@string/login_register"
            android:textColor="@color/white_1"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"/>

        <Button
            android:id="@+id/login_next"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="36dp"
            android:background="@drawable/login_button_login_next"
            android:text="@string/login_next"
            android:textColor="@color/white_1"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

</LinearLayout>
