<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/white_back">

    <include
        android:id="@+id/me_title_bar"
        layout="@layout/title_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/about_logo_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/me_title_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:src="@mipmap/app_logo"
        android:scaleType="centerInside"/>

    <TextView
        android:id="@+id/about_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/about_logo_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/about_text_color"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/about_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/about_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/about_text_color"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_copyright"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/about_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/about_upgrade_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_upgrade_text"
        android:textSize="14sp"
        android:textColor="@color/blue_1"
        app:layout_constraintBottom_toTopOf="@id/about_copyright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp" />

    <ImageView
        android:id="@+id/about_checkout_upgrade"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:padding="12dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/checkout_upgrade"
        app:layout_constraintBottom_toTopOf="@id/about_upgrade_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>